Adding tailwind with npm

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,10 +7,15 @@
   <title>Museum</title>
   <link rel="stylesheet" type="text/css" href="/css/jass.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link href="/dist/output.css" rel="stylesheet">
+
 </head>
 
 <body>
   <header>
+    <h1 class="text-3xl font-bold underline">
+      Hello world!
+    </h1>
     <h1>Welcome to the Four Seasons Museum</h1>
   </header>
   <nav>
