--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,10 +7,17 @@
   <title>Museum</title>
   <link rel="stylesheet" type="text/css" href="/css/jass.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
+
+  {{!-- Add Tailwind   --}}
+  <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 
 <body>
   <header>
+      <h1 class="text-3xl font-bold underline text-red-500">
+        Hello world!
+      </h1>
     <h1>Welcome to the Four Seasons Museum</h1>
   </header>
   <nav>
