--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Museum</title>
+  <title>CMS Tech Blog</title>
   <link rel="stylesheet" type="text/css" href="/css/jass.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 
@@ -14,24 +14,21 @@
 </head>
 
 <body>
-  <header>
-      <h1 class="text-3xl font-bold underline text-red-500">
-        Hello world!
-      </h1>
-    <h1>Welcome to the Four Seasons Museum</h1>
-  </header>
   <nav>
     <a href="/">Home</a>
+    <a href="/">Dashboard</a>
     {{#if loggedIn}}
     <button id="logout" class="btn-no-style">Logout</button>
     {{else}}
     <a href="/login">Login</a>
     {{/if}}
   </nav>
+  <header>
+      <h1 class="text-3xl font-bold underline text-red-500">
+        The Tech Blog
+      </h1>
+  </header>
   <main>
-    <aside>
-      <h2>Enjoy the galleries!</h2>
-    </aside>
     <div class="gallery">
       {{{body}}}
     </div>
