Add blog class and route

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,7 @@
-{{#each galleries as |gallery|}}
+{{#each blogs as |blog|}}
+  {{> blog-details}}
+{{/each }}
+
+{{!-- {{#each galleries as |gallery|}}
 {{> gallery-details}}
-{{/each}}
+{{/each}} --}}
