--- a/views/partials/blog-details.handlebars
+++ b/views/partials/blog-details.handlebars
@@ -1,6 +1,13 @@
-<section class="card">
+{{!-- <section class="card">
   <a href="/gallery/{{id}}">
     <header>{{name}}</header>
     <img src="/images/{{paintings.[0].filename}}" alt="{{paintings.[0].description}}">
   </a>
+</section> --}}
+
+<section class="card">
+  <a href="">
+    <header>test</header>
+  </a>
+
 </section>
