--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,10 +11,15 @@
   {{!-- Add Tailwind   --}}
   <script src="https://cdn.tailwindcss.com"></script>
 
+
+
 </head>
 
 <body>
   <nav>
+      <h1 class="text-3xl font-bold underline text-red-400">
+        Hello world!
+      </h1>
     <a href="/">Home</a>
     <a href="/">Dashboard</a>
     {{#if loggedIn}}
