--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,6 @@
 </head>
 
 <body class="flex flex-col bg-slate-800">
-
   <header class="p-8 bg-cyan-900">
       <nav class="text-white gap-6 flex">
         <a href="/">Home</a>
@@ -33,7 +32,7 @@
   </header>
 
   <main>
-    <div class="gallery">
+    <div class="flex flex-col lg:flex-row justify-center py-8">
       {{{body}}}
     </div>
   </main>
