--- a/views/partials/blog-details.handlebars
+++ b/views/partials/blog-details.handlebars
@@ -1,4 +1,4 @@
-<section class="mx-3">
+<section class="mx-3 mb-8">
     <div class="flex justify-center">
       <div class="flex flex-col rounded-lg bg-white shadow-lg dark:bg-neutral-700 md:max-w-xl md:flex-row">
         <img class="h-96 w-full rounded-t-lg object-cover md:h-auto md:w-48 md:rounded-none md:rounded-l-lg"
@@ -18,3 +18,4 @@
       </div>
     </div>
 </section>
+
