Add basic card style

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,8 +16,8 @@
 </head>
 
 <body class="flex flex-col bg-slate-800">
-  <header class="p-8 bg-cyan-900">
-      <nav class="text-white gap-6 flex">
+  <header class="p-8 bg-slate-700">
+      <nav class="text-white gap-6 flex mb-3">
         <a href="/">Home</a>
         <a href="/">Dashboard</a>
         {{#if loggedIn}}
@@ -26,7 +26,7 @@
         <a href="/login">Login</a>
         {{/if}}
       </nav>
-      <h1 class="text-3xl font-bold underline text-red-500">
+      <h1 class="text-3xl font-bold bg-white p-3 text-slate-700">
         The Tech Blog
       </h1>
   </header>
