--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,8 +1,26 @@
-<div class="text-center">
-  <h2>{{id}}</h2>
-  <p>{{title}}</p>
-  <p>{{post_by}}</p>
-  <p>{{post_date}}</p>
-  <p>{{createdAt}}</p>
-  <p>{{updatedAt}}</p>
-</div>
+
+<section class="mx-3 mb-8">
+    <div class="flex justify-center">
+      <div class="flex flex-col rounded-lg bg-white shadow-lg md:max-w-xl md:flex-row">
+        <img class="h-96 w-full rounded-t-lg object-cover md:h-auto md:w-48 md:rounded-none md:rounded-l-lg"
+          src="https://picsum.photos/200/300" alt="" />
+        <div class="flex flex-col justify-start p-6">
+          <h5 class="mb-2 text-xl font-medium text-slate-700">
+            {{title}}
+          </h5>
+          <p>{{ post_by }}</p>
+          <p class="mb-4 text-base text-neutral-600">
+            {{ post_content }}
+          </p>
+          <p class="text-xs text-neutral-500">
+            {{ post_date}}
+          </p>
+            <h2>{{id}}</h2>
+
+            <p>{{createdAt}}</p>
+            <p>{{updatedAt}}</p>
+        </div>
+      </div>
+    </div>
+
+</section>
