--- a/views/partials/blog-details.handlebars
+++ b/views/partials/blog-details.handlebars
@@ -1,21 +1,23 @@
 <section class="mx-3 mb-8">
+  <a href="/blog/{{id}}">
     <div class="flex justify-center">
       <div class="flex flex-col rounded-lg bg-white shadow-lg dark:bg-neutral-700 md:max-w-xl md:flex-row">
         <img class="h-96 w-full rounded-t-lg object-cover md:h-auto md:w-48 md:rounded-none md:rounded-l-lg"
           src="https://picsum.photos/200/300" alt="" />
         <div class="flex flex-col justify-start p-6">
-          <h5 class="mb-2 text-xl font-medium text-neutral-800 dark:text-neutral-50">
+          <h5 class="mb-2 text-xl font-medium text-slate-700">
             {{title}}
           </h5>
           <p>{{ post_by }}</p>
-          <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
+          <p class="mb-4 text-base text-neutral-600">
             {{ post_content }}
           </p>
-          <p class="text-xs text-neutral-500 dark:text-neutral-300">
+          <p class="text-xs text-neutral-500">
             {{ post_date}}
           </p>
         </div>
       </div>
     </div>
+  </a>
 </section>
 
