--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,10 @@
-<div class="row justify-space-between-md">
-  <div class="login-card">
+<div class="row justify-space-between-md gap-3">
+  <div class="bg-white p-5">
     <h2 class="page-title">Login</h2>
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="username-login">Username:</label>
+        <input class="form-input" type="text" id="username-login" />
       </div>
       <div class="form-group">
         <label for="password-login">Password:</label>
@@ -15,16 +15,12 @@
       </div>
     </form>
   </div>
-  <div class="login-card">
+  <div class="bg-white p-5">
     <h2 class="page-title">Signup</h2>
     <form class="form signup-form">
       <div class="form-group">
         <label for="username-signup">Username:</label>
         <input class="form-input" type="text" id="username-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
       </div>
       <div class="form-group">
         <label for="password-signup">Password:</label>
