--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
   <header class="p-8 bg-slate-700">
       <nav class="text-white gap-6 flex mb-3">
         <a href="/">Home</a>
-        <a href="/">Dashboard</a>
+        <a href="/dashboard">Dashboard</a>
         {{#if loggedIn}}
         <button id="logout" class="btn-no-style">Logout</button>
         {{else}}
