--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,7 @@
 <h1 class="text-white">
   {{hello}}
 </h1>
+
+<button class="new-post btn">+ New Post</button>
+
+<script src="./js/dashboard.js"></script>
