--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,40 @@
-<h1 class="text-white">
-  {{hello}}
-</h1>
+<div class="flex flex-col w-50">
+  <h1 class="text-white">
+    {{hello}}
+  </h1>
 
-<button class="new-post btn">+ New Post</button>
+  <div class="w-full">
+    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+      <legend>Create New Post</legend>
+      <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="post-title">
+          Title
+        </label>
+        <input
+          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+          id="post-title" type="text" placeholder="post-title">
+      </div>
+      <div class="mb-6">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="post-content">
+          Content
+        </label>
+        <textarea class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+          id="post-content" type="textarea">
+        </textarea>
+      </div>
+      <div class="flex items-center justify-between">
+        <button
+          class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+          type="button">
+          Create
+        </button>
+
+      </div>
+    </form>
+  </div>
+
+  <button class="js-new-post-btn btn">+ New Post</button>
+</div>
+
 
 <script src="./js/dashboard.js"></script>
