--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -8,6 +8,8 @@
           <h5 class="mb-2 text-xl font-medium text-slate-700">
             {{title}}
           </h5>
+
+          <p>{{description}}</p>
           <p>{{ post_by }}</p>
           <p class="mb-4 text-base text-neutral-600">
             {{ post_content }}
