--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,7 +5,7 @@
   </h1>
 
   <div class="w-full">
-    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+    <form class="create-post-form bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
       <legend>Create New Post</legend>
       <div class="mb-4">
         <label class="block text-gray-700 text-sm font-bold mb-2" for="post-title">
@@ -19,17 +19,11 @@
         <label class="block text-gray-700 text-sm font-bold mb-2" for="post-content">
           Content
         </label>
-        <textarea class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
-          id="post-content" type="textarea">
-        </textarea>
+        <textarea class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 focus:outline-none focus:shadow-outline" id="post-content" name="post-content" placeholder="Add description"></textarea>
       </div>
       <div class="flex items-center justify-between">
-        <button
-          class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-          type="button">
-          Create
-        </button>
-
+          <input  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+         type="submit" value="Create">
       </div>
     </form>
   </div>
