--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -32,12 +32,15 @@
   {{#if blogs.length }}
     <div>
       <h3>Post Blogs</h3>
-      {{#each blogs as [blog]}}
+      {{#each blogs as |blog|}}
         <div class="row">
-          <div class="col">
+          <div class="col text-white">
             <p>Blog</p>
-            {{blog.id}}
-            <button class="btn btn-sm btn-danger" data-id="{{blog.id}}">DELETE</button>
+
+            <div class="col-md-8">
+              <h4><a href="/blogs/{{blog.id}}">{{blog.title}}</a></h4>
+            </div>
+            <button class="btn btn-sm btn-danger delete-btn" data-id="{{blog.id}}">DELETE</button>
 
           </div>
 
