--- a/views/partials/blog-details.handlebars
+++ b/views/partials/blog-details.handlebars
@@ -8,7 +8,7 @@
           <h5 class="mb-2 text-xl font-medium text-slate-700">
             {{title}}
           </h5>
-          <p>{{ post_by }}</p>
+          {{!-- <p>{{ post_by }}</p> --}}
           <p class="mb-4 text-base text-neutral-600">
             {{ post_content }}
           </p>
