--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
   </header>
 
   <main>
-    <div class="flex flex-col lg:flex-row justify-center py-8">
+    <div class="flex flex-col lg:flex-row lg:flex-wrap justify-center py-8">
       {{{body}}}
     </div>
   </main>
