--- a/views/partials/blog-details.handlebars
+++ b/views/partials/blog-details.handlebars
@@ -1,6 +1,5 @@
-<section class="mx-3 mb-8">
-  <a href="/blog/{{id}}">
-    <div class="flex justify-center">
+<section class="mb-3 w-4/12 flex">
+  <a href="/blog/{{id}}" class="flex">
       <div class="flex flex-col rounded-lg bg-white shadow-lg dark:bg-neutral-700 md:max-w-xl md:flex-row">
         <img class="h-96 w-full rounded-t-lg object-cover md:h-auto md:w-48 md:rounded-none md:rounded-l-lg"
           src="https://picsum.photos/200/300" alt="" />
@@ -17,7 +16,6 @@
           </p>
         </div>
       </div>
-    </div>
   </a>
 </section>
 
