--- a/views/partials/blog-details.handlebars
+++ b/views/partials/blog-details.handlebars
@@ -1,6 +1,6 @@
 <section class="mb-3 w-4/12 flex">
-  <a href="/blog/{{id}}" class="flex">
-      <div class="flex flex-col rounded-lg bg-white shadow-lg dark:bg-neutral-700 md:max-w-xl md:flex-row">
+  <a href="/blog/{{id}}" class="flex flex-wrap">
+      <div class="flex flex-wrap rounded-lg bg-white shadow-lg dark:bg-neutral-700">
         <img class="h-96 w-full rounded-t-lg object-cover md:h-auto md:w-48 md:rounded-none md:rounded-l-lg"
           src="https://picsum.photos/200/300" alt="" />
         <div class="flex flex-col justify-start p-6">
