--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,7 +1,7 @@
 
 <section class="mx-3 mb-8">
     <div class="flex justify-center">
-      <div class="flex flex-col rounded-lg bg-white shadow-lg md:max-w-xl md:flex-row">
+      <div class="flex  rounded-lg bg-white shadow-lg">
         <img class="h-96 w-full rounded-t-lg object-cover md:h-auto md:w-48 md:rounded-none md:rounded-l-lg"
           src="https://picsum.photos/200/300" alt="" />
         <div class="flex flex-col justify-start p-6">
