--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
   </header>
 
   <main>
-    <div class="flex flex-col lg:flex-row lg:flex-wrap justify-center gap-2 mt-5">
+    <div class="p-8 flex flex-col md:flex-row md:flex-wrap">
       {{{body}}}
     </div>
   </main>
