--- a/views/partials/blog-details.handlebars
+++ b/views/partials/blog-details.handlebars
@@ -1,9 +1,8 @@
-<section class="mb-3 w-4/12 flex">
-  <a href="/blog/{{id}}" class="flex flex-wrap">
-      <div class="flex flex-wrap rounded-lg bg-white shadow-lg dark:bg-neutral-700">
-        <img class="h-96 w-full rounded-t-lg object-cover md:h-auto md:w-48 md:rounded-none md:rounded-l-lg"
-          src="https://picsum.photos/200/300" alt="" />
-        <div class="flex flex-col justify-start p-6">
+<section class="mb-3 flex w-full md:w-1/3 px-3 pb-3">
+  <a href="/blog/{{id}}" class="flex flex-wrap grow">
+      <div class="flex rounded-lg bg-white shadow-lg dark:bg-neutral-700 grow">
+
+        <div class="flex flex-col justify-start p-6 grow">
           <h5 class="mb-2 text-xl font-medium text-slate-700">
             {{title}}
           </h5>
