Add user name in blog post

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -17,6 +17,7 @@
 
             <p>{{format_time createdAt}}</p>
             <p>{{format_date updatedAt}}</p>
+            <p>Posted by {{ user.username }}</p>
         </div>
       </div>
     </div>
