--- a/views/partials/blog-details.handlebars
+++ b/views/partials/blog-details.handlebars
@@ -1,7 +1,7 @@
 <section class="mb-3 flex w-full md:w-1/3 px-3 pb-3">
   <a href="/blog/{{id}}" class="flex flex-wrap grow">
       <div class="flex rounded-lg bg-white shadow-lg dark:bg-neutral-700 grow">
-
+        {{user.username}}
         <div class="flex flex-col justify-start p-6 grow">
           <h5 class="mb-2 text-xl font-medium text-slate-700">
             {{title}}
