--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -40,7 +40,9 @@
             <div class="col-md-8">
               <h4><a href="/blogs/{{blog.id}}">{{blog.title}}</a></h4>
             </div>
-            <button class="btn btn-sm btn-danger delete-btn" data-id="{{blog.id}}">DELETE</button>
+            <button class="btn bg-red-500 text-white delete-btn" data-id="{{blog.id}}">DELETE</button>
+
+            <button class="btn bg-green-500 text-white edit-btn" data-id="{{blog.id}}">EDIT</button>
 
           </div>
 
