Add hide and show form function to dashboard

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,7 +5,7 @@
   </h1>
 
   <div class="w-full">
-    <form class="create-post-form bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+    <form class="create-post-form bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 hidden">
       <legend>Create New Post</legend>
       <div class="mb-4">
         <label class="block text-gray-700 text-sm font-bold mb-2" for="post-title">
