--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -38,7 +38,7 @@
             <p>Blog</p>
 
             <div class="col-md-8">
-              <h4><a href="/blogs/{{blog.id}}">{{blog.title}}</a></h4>
+              <h4><a "edit-blog-title" href="/blogs/{{blog.id}}">{{blog.title}}</a></h4>
             </div>
             <button class="btn bg-red-500 text-white delete-btn" data-id="{{blog.id}}">DELETE</button>
 
