--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -33,16 +33,43 @@
     <div>
       <h3>Post Blogs</h3>
       {{#each blogs as |blog|}}
+        <div class="w-full">
+          <form class="edit-post-form bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+            <legend>Edit Post</legend>
+            <div class="mb-4">
+              <label class="block text-gray-700 text-sm font-bold mb-2" for="post-title">
+                Title
+              </label>
+                            {{!-- <h4><a "edit-blog-title" href="/blogs/{{blog.id}}">{{blog.title}}</a></h4>  --}}
+              <input
+                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                id="post-title" type="text" placeholder="post-title" value="{{blog.title}}">
+            </div>
+            <div class="mb-6">
+              <label class="block text-gray-700 text-sm font-bold mb-2" for="post-content">
+                Content
+              </label>
+              <textarea
+                class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 focus:outline-none focus:shadow-outline"
+                id="post-content" name="post-content" placeholder="Add description" >{{blog.post_content}}</textarea>
+            </div>
+            <div class="flex items-center justify-between">
+              <button class="btn bg-red-500 text-white delete-btn" data-id="{{blog.id}}">DELETE</button>
+              <input
+                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                type="submit" value="Edit">
+            </div>
+          </form>
+        </div>
+
         <div class="row">
-          <div class="col text-white">
+          <div class="col text-white edit-form-container">
             <p>Blog</p>
 
             <div class="col-md-8">
-              <h4><a "edit-blog-title" href="/blogs/{{blog.id}}">{{blog.title}}</a></h4>
-            </div>
-            <button class="btn bg-red-500 text-white delete-btn" data-id="{{blog.id}}">DELETE</button>
 
-            <button class="btn bg-green-500 text-white edit-btn" data-id="{{blog.id}}">EDIT</button>
+            </div>
+
 
           </div>
 
