--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
 <div class="flex flex-col w-50">
   <h1 class="text-white">
-    {{id}}
-    {{username}}
+    User: {{id}}
+    Username: {{username}}
   </h1>
 
   <div class="w-full">
@@ -31,50 +31,16 @@
   <button class="js-new-post-btn btn">+ New Post</button>
   {{#if blogs.length }}
     <div>
-      <h3>Post Blogs</h3>
-      {{#each blogs as |blog|}}
-        <div class="w-full">
-          <form class="edit-post-form bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-            <legend>Edit Post</legend>
-            <div class="mb-4">
-              <label class="block text-gray-700 text-sm font-bold mb-2" for="post-title">
-                Title
-              </label>
-                            {{!-- <h4><a "edit-blog-title" href="/blogs/{{blog.id}}">{{blog.title}}</a></h4>  --}}
-              <input
-                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                id="post-title" type="text" placeholder="post-title" value="{{blog.title}}">
+      <h2 class="text-white mt-8 my-3">Existing Blogs</h2>
+      <div class="flex flex-col gap-3">
+        {{#each blogs as |blog|}}
+          <a href="" class="grow bg-slate-700 p-5 rounded-sm text-white">
+            <div class="">
+              <h3>{{blog.title}}</h3>
             </div>
-            <div class="mb-6">
-              <label class="block text-gray-700 text-sm font-bold mb-2" for="post-content">
-                Content
-              </label>
-              <textarea
-                class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 focus:outline-none focus:shadow-outline"
-                id="post-content" name="post-content" placeholder="Add description" >{{blog.post_content}}</textarea>
-            </div>
-            <div class="flex items-center justify-between">
-              <button class="btn bg-red-500 text-white delete-btn" data-id="{{blog.id}}">DELETE</button>
-              <input
-                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                type="submit" value="Edit">
-            </div>
-          </form>
-        </div>
-
-        <div class="row">
-          <div class="col text-white edit-form-container">
-            <p>Blog</p>
-
-            <div class="col-md-8">
-
-            </div>
-
-
-          </div>
-
-        </div>
-      {{/each}}
+          </a>
+        {{/each}}
+      </div>
 
     </div>
   {{/if}}
