--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -34,7 +34,7 @@
       <h2 class="text-white mt-8 my-3">Existing Blogs</h2>
       <div class="flex flex-col gap-3">
         {{#each blogs as |blog|}}
-          <a href="" class="grow bg-slate-700 p-5 rounded-sm text-white">
+          <a href="/blog/{{id}}" class="grow bg-slate-700 p-5 rounded-sm text-white">
             <div class="">
               <h3>{{blog.title}}</h3>
             </div>
