--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -34,13 +34,13 @@
       <h2 class="text-white mt-8 my-3">Existing Blogs</h2>
       <div class="flex flex-col gap-3">
         {{#each blogs as |blog|}}
-          <a href="/blog/{{id}}" class="grow bg-slate-700 p-5 rounded-sm text-white">
+          <a href="/blogedit/{{id}}" class="grow bg-slate-700 p-5 rounded-sm text-white">
             <div class="">
               <h3>{{blog.title}}</h3>
             </div>
           </a>
-          <button class="btn bg-red-500 text-white delete-btn" data-id="{{blog.id}}">DELETE</button>
-          <button class="btn bg-green-500 text-white edit-btn" data-id="{{blog.id}}">EDIT</button>
+          {{!-- <button class="btn bg-red-500 text-white delete-btn" data-id="{{blog.id}}">DELETE</button>
+          <button class="btn bg-green-500 text-white edit-btn" data-id="{{blog.id}}">EDIT</button> --}}
         {{/each}}
       </div>
 
