Add updating form

--- a/views/blogedit.handlebars
+++ b/views/blogedit.handlebars
@@ -5,8 +5,9 @@
   </h1>
 
   <div class="w-full">
-    <form class="edit-post-form bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+    <form id="" class="edit-post-form bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
       <legend>Edit Post</legend>
+      <input type="hidden" id="blog-id" name="blog-id" value="{{id}}">
       <div class="mb-4">
         <label class="block text-gray-700 text-sm font-bold mb-2" for="post-title">
           Title
