--- a/views/blogedit.handlebars
+++ b/views/blogedit.handlebars
@@ -1,6 +1,6 @@
 <div class="flex flex-col w-50">
   <h1 class="text-white">
-    User: {{id}}
+    blog: {{id}}
     Username: {{username}}
   </h1>
 
@@ -31,7 +31,6 @@
           class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
           type="submit" value="Update">
         <button class="btn bg-red-500 text-white delete-btn" data-id="{{blog.id}}">DELETE</button>
-        <button class="btn bg-green-500 text-white edit-btn" data-id="{{blog.id}}">EDIT</button>
       </div>
     </form>
   </div>
