--- a/views/blogedit.handlebars
+++ b/views/blogedit.handlebars
@@ -30,8 +30,8 @@
         <input
           class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
           type="submit" value="Update">
-        <button class="btn bg-red-500 text-white delete-btn" data-id="{{blog.id}}">DELETE</button>
       </div>
+        <button class="btn bg-red-500 text-white delete-btn" data-id="{{id}}">DELETE</button>
     </form>
   </div>
 </div>
