Add new form to blog post

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -21,5 +21,12 @@
         </div>
       </div>
     </div>
+    <form action="" id="comment-form">
+      <textarea rows="4" cols="50" name="comment" form="comment-form" placeholder="new comment" class="comment-details text-black">
+        </textarea>
+      <input type="submit" class="btn bg-red-500 text-white">
+    </form>
 
 </section>
+
+<script src="../js/blog.js"></script>
