--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,7 +1,7 @@
 
 <section class="mx-3 mb-8">
     <div class="flex justify-center">
-      <div class="flex  rounded-lg bg-white shadow-lg">
+      <div class="flex rounded-lg bg-white shadow-lg">
         <img class="h-96 w-full rounded-t-lg object-cover md:h-auto md:w-48 md:rounded-none md:rounded-l-lg"
           src="https://picsum.photos/200/300" alt="" />
         <div class="flex flex-col justify-start p-6">
@@ -20,12 +20,19 @@
             <p>Posted by {{ user.username }}</p>
         </div>
       </div>
+
     </div>
     <form action="" id="comment-form">
       <textarea rows="4" cols="50" name="comment" form="comment-form" placeholder="new comment" class="comment-details text-black">
         </textarea>
       <input type="submit" class="btn bg-red-500 text-white">
     </form>
+    <div class="rounded bg-white h-[50px]">
+      <div class="add-commenter"></div>
+      <div class="addComments">
+        test
+      </div>
+    </div>
 
 </section>
 
