--- a/views/partials/blog-details.handlebars
+++ b/views/partials/blog-details.handlebars
@@ -1,19 +1,21 @@
-<section class="mb-3 flex w-full md:w-1/3 px-3 pb-3">
-  <a href="/blog/{{id}}" class="flex flex-wrap grow">
+<section class="mb-3 flex w-full lg:w-1/3 px-3 pb-3">
+  <a href="/blog/{{id}}" class="flex flex-wrap grow hover:no-underline">
       <div class="flex rounded-lg bg-white shadow-lg dark:bg-neutral-700 grow">
-        {{user.username}}
         <div class="flex flex-col justify-start p-6 grow">
-          <h5 class="mb-2 text-xl font-medium text-slate-700">
+          <h5 class="mb-2 text-xl font-medium text-slate-700 uppercase">
             {{title}}
           </h5>
-          {{!-- <p>{{ post_by }}</p> --}}
           <p class="mb-4 text-base text-neutral-600">
             {{ post_content }}
           </p>
-          <p class="text-xs text-neutral-500">
-            {{format_time createdAt}}
-            {{format_date updatedAt}}
-          </p>
+          <div class="text-neutral-500">
+            <p class="text-xs">
+              Created by:
+              {{format_time createdAt}}
+              {{format_date updatedAt}}
+            </p>
+            <p class="text-xs">By: {{user.username}}</p>
+          </div>
         </div>
       </div>
   </a>
