--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,6 +1,6 @@
 
 <section class="mx-3 mb-8">
-    <div class="flex justify-center">
+    <div class="flex flex-col justify-center">
       <div class="flex rounded-lg bg-white shadow-lg">
         <img class="h-96 w-full rounded-t-lg object-cover md:h-auto md:w-48 md:rounded-none md:rounded-l-lg"
           src="https://picsum.photos/200/300" alt="" />
@@ -20,26 +20,29 @@
             <p>Posted by {{ user.username }}</p>
         </div>
       </div>
-
-    </div>
-   {{#if loggedIn}}
-    <form action="" id="comment-form">
-      <textarea rows="4" cols="50" name="comment" form="comment-form" placeholder="new comment" class="comment-details text-black">
-        </textarea>
-      <input type="submit" class="btn bg-red-500 text-white">
-    </form>
-    {{/if}}
-    <div class="add-commenter"></div>
-    {{#each comments as |comment| }}
-      <div class="flex flex-col">
-        <div class="addComments rounded bg-white h-[50px]">
+      {{#if loggedIn}}
+        <div>
+          <form action="" id="comment-form">
+            <textarea rows="4" cols="50" name="comment" form="comment-form" placeholder="new comment"
+              class="comment-details text-black">
+                  </textarea>
+            <input type="submit" class="btn bg-red-500 text-white">
+          </form>
+        </div>
+      {{/if}}
+      {{#each comments as |comment| }}
+        <div class="flex flex-col">
+          <div class="addComments rounded bg-white p-5 mb-3">
             <p>{{ comment.body }}</p>
             <p>{{ comment.user_id }}</p>
-            <p>{{ format_time createdAt }}</p>
-            <p>{{format_date updatedAt}}</p>
+            <div class="flex justify-between">
+              <span class="text-xs">{{ format_time createdAt }}</span>
+              <span class="text-xs">{{format_date updatedAt}}</span>
+            </div>
+          </div>
         </div>
-      </div>
-    {{/each}}
+      {{/each}}
+    </div>
 </section>
 
 <script src="../js/comment.js"></script>
