--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<div class="flex flex-col w-50">
+<div class="flex flex-col">
   <h1 class="text-white">
     User: {{id}}
     Username: {{username}}
