--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,5 @@
-{{#each blogs as |blog|}}
-  {{> blog-details}}
-{{/each }}
+<div class="flex flex-col lg:flex-row lg:flex-wrap">
+  {{#each blogs as |blog|}}
+    {{> blog-details}}
+  {{/each }}
+</div>
