--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
   </header>
 
   <main>
-    <div class="p-8 flex flex-col lg:flex-row lg:flex-wrap">
+    <div class="p-8">
       {{{body}}}
     </div>
   </main>
