--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="row justify-space-between-md gap-3">
+<div class="flex flex-col lg:flex-row lg:flex-wrap justify-center items-center gap-3">
   <div class="bg-white p-5">
     <h2 class="page-title">Login</h2>
     <form class="form login-form">
