--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,12 +1,12 @@
 <div class="flex flex-col w-50">
-  <h1 class="text-white">
+  <h1 class="text-white mb-3">
     blog: {{id}}
     Username: {{username}}
   </h1>
 
   <div class="w-full">
     <form id="" class="edit-post-form bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-      <legend>Edit Post</legend>
+      <legend class="uppercase font-bold">Edit Post</legend>
       <input type="hidden" id="blog-id" name="blog-id" value="{{id}}">
       <div class="mb-4">
         <label class="block text-gray-700 text-sm font-bold mb-2" for="post-title">
@@ -30,8 +30,8 @@
         <input
           class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
           type="submit" value="Update">
+        <button type="button" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline delete-btn" data-id="{{id}}">DELETE</button>
       </div>
-        <button type="button" class="btn bg-red-500 text-white delete-btn" data-id="{{id}}">DELETE</button>
     </form>
   </div>
 </div>
